# projetox

./: .env.example  .gitignore  README.md  api ticket.txt  docker-compose.yml  init.md  mypy.ini  opencode.json  pyproject.toml  ruff.toml  run-projetox.cmd  start-opencode.cmd  task-002-prompt.txt
.github/workflows/: ci.yml
00-Index/: Bootstrap.md  Decisoes-Pendentes.md  HERMES.md  Hermes-Ref.md  Hermes-Skills.md  Matriz-Rastreabilidade.md  SDD-Index.md  Setup-Guia.md
00-Index/Logs/: README.md  sessao-2026-07-03.md  sessao-YYYY-MM-DD.md
01-Fundacao/: Glossario-Ilustrado.md  Glossario.md  Objetivos.md  Personas.md  Visao-Geral.md
02-Requisitos/: Casos-de-Uso.md  Requisitos-Funcionais.md  Requisitos-Nao-Funcionais.md
03-Comportamento/: Fluxos.md  Riscos.md
04-Arquitetura/: ADRs.md  Agentes.md  Arquitetura.md  Componentes.md  Configuracao.md  Convencoes-Codigo.md  Estrutura-Projeto.md  Integracoes.md  Movidesk-API.md  Operacao.md  Privacidade.md  Seguranca.md
05-Dados/: Banco-de-Dados.md  Memoria-Obsidian.md
06-Planejamento/: Backlog.md  Checklist-MVP.md  Evolucao-Futura.md  MVP.md  Roadmap.md
06-Planejamento/Tasks/: README.md  task-001.md  task-002.md
07-Testes/: Cenarios-Falha.md  Checklist-Loop.md  Criterios-Aceitacao.md  Dados-Teste.md  Estrategia-Rollback.md  Estrategia-Testes.md  Limites-Execucao.md  Metricas.md  Plano-Testes.md  Quality-Gates.md  Servicos-Mock.md  Simulacao.md  Validacao-Loop.md
scripts/: start-daemon.cmd
src/projetox/: __init__.py  __main__.py
tests/: conftest.py
tests/integracao/: test_servico_acompanhamento.py
(+74 files in other folders)
