[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "projetox"
version = "0.1.0"
description = "Assistente inteligente para otimizar fluxo de atendimentos tecnicos"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
