[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projetox"
version = "0.1.0"
description = "Assistente inteligente para otimizar fluxo de atendimentos tecnicos"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "sqlalchemy>=2",
    "asyncpg>=0.29",
    "redis>=5",
    "anthropic>=0.30",
    "openai>=1",
    "httpx>=0.27",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pytest-mock>=3",
    "factory-boy>=3",
]

[project.scripts]
projetox = "projetox.apresentacao.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
